source/parser_generator/sandbox6/grammar.txt
---------------------------------------------------------------------------------------
---------------------------------------------------------------------------------------
------------------------ full EBNF grammar of my language. ----------------------------
---------------------------------------------------------------------------------------
---------------------------------------------------------------------------------------

- this a file which specifies the full ebnf grammar of my language,
- in a sudo ebnf format, which i created.
- this file format is read by a parser generator i wrote.

- ...these are comments, by the way.

------------------------ declaration lists ---------------------------


translation_unit 
	= declaration_list 
	| newlines


declaration_list 
	= newlines declaration required_newlines declaration_list 
	| E

interface_declaration_list 
	= newlines interface_declaration required_newlines interface_declaration_list 
	| E

implementation_declaration_list 
	= newlines implementation_declaration required_newlines implementation_declaration_list 
	| E



interface_declaration_block 
	= { interface_declaration_list }


implementation_declaration_block
	= { implementation_declaration_list }




------------------- enum declarations ------------------------------


enum_interface_declaration_block
	= { enum_identifier_list }

enum_identifier_list
	= identifier required_newlines enum_identifier_list
	| identifier , newlines enum_identifier_list 
	| E


enum_implementation_declaration_block
	= { enum_assignment_list }

enum_assignment_list
	= enum_assignment required_newlines enum_assignment_list
	| enum_assignment , newlines enum_assignment_list 
	| E

enum_assignment
	= identifier = expression
	| identifier






------------------------ declarations ---------------------------

declaration 
	= implementation_declaration 
	| interface_declaration


interface_declaration 
	= function_interface_declaration
	| type_interface_declaration
	| space_interface_declaration 
	| enum_interface_declaration
	| variable_interface_declaration 
	| kind_interface_declaration


implementation_declaration 
	= function_implementation_declaration 
	| type_implementation_declaration 
	| space_implementation_declaration 
	| enum_implementation_declaration
	| variable_implementation_declaration  
	| kind_implementation_declaration 



------------- interface declarations --------------------


function_interface_declaration 
	= documentation function_signature

variable_interface_declaration 
	= documentation assignment_declaration_statement



type_interface_declaration 
	= documentation type_signature interface_declaration_block

kind_interface_declaration 
	= documentation kind_signature



space_interface_declaration 
	= documentation identifier declaration_block

enum_interface_declaration 
	= documentation identifier : type_expression enum_interface_declaration_block
	| documentation identifier : enum_interface_declaration_block






------------------ implementation declarations ------------------------



function_implementation_declaration 
	= function_signature block

variable_implementation_declaration 
	= assignment_statement


type_implementation_declaration
	= type_signature implementation_declaration_block

kind_implementation_declaration 
	= kind_signature block


space_implementation_declaration 
	= identifier implementation_declaration_block

enum_implementation_declaration 
	= identifier : type_expression enum_implementation_declaration_block
	| identifier : enum_implementation_declaration_block







--------------------------- signatures ----------------------------


function_signature 
	= function_call_signature return_type kind_call_signature precedence qualifier_list


type_signature
	= type_call_signature parent_type kind_call_signature precedence qualfier_list


kind_signature
	= kind_call_signature return_type precedence qualifier_list


function_call_signature 
	= ( function_parameter_list )



type_call_signature 
	= { type_parameter_list }



kind_call_signature 
	= [ kind_parameter_list ]



precedence
	= < function_call_signature + number > 
	| < type_call_signature + number > 
	| < kind_call_signature + number > 
	| < number > 
	| E


qualifier_list 
	= qualifier qualifier_list 
	| E


return_type
	= - > type_expression 
	| E




-------------------- function parameters  ----------------------

function_parameter_list 
	= function_parameter function_parameter_list 
	| E

function_parameter
	= required_function_parameter
	| ( optional_function_parameter_list )

required_function_parameter
	= parameter 
	| function_free_identifier 

optional_function_parameter_list 
	= required_function_parameter optional_functional_parameter_list 
	| E



------------------------- type parameters --------------------



type_parameter_list 
	= type_parameter type_parameter_list 
	| E

type_parameter
	= required_type_parameter
	| ( optional_type_parameter_list )

required_type_parameter
	= parameter 
	| type_free_identifier 

optional_type_parameter_list 
	= required_type_parameter optional_type_parameter_list 
	| E




------------------------ kind parameters --------------------


kind_parameter_list 
	= kind_parameter kind_parameter_list 
	| E

kind_parameter
	= required_kind_parameter
	| ( optional_kind_parameter_list )

required_kind_parameter
	= parameter 
	| kind_free_identifier 

optional_kind_parameter_list 
	= required_kind_parameter optional_kind_parameter_list 
	| E




------------ general parameter items ------------------------

parameter 
	= identifier : type_expression = expression 
	| identifier : type_expression 
	| identifier = expression


function_free_identifier 
	= overridable_keyword 
	| identifier

type_free_identifier 
	= overridable_keyword{where x != { or }} 
	| identifier

kind_free_identifier 
	= overridable_keyword{where x != [ or ]} 
	| identifier



---------------------------------- statements -------------------------------------



implementation_declaration_or_statement_list
	= implementation_declaration    implementation_declaration_or_statement_list
	| statement   implementation_declaration_or_statement_list
	| E


block 
	= { statement_list }


statement_list 
	= newlines terminated_statement statement_list 
	| newlines
	| E


terminated_statement 
	= statement{next == } } 
	| statement required_newlines 
	| statement ; 

statement 
	= if_statement 
	| while_statement 
	| repeatwhile_statement 
	| return_statement 
	| for_statement 
	| assignment_declaration_statement 
	| assignment_statement 
	| block 
	| expression



--------------------------- specfic types of statements -------------------------------



assignment_statement 
	= identifier : type_expression = expression
	| identifier = expression


assignment_declaration_statement 
	= identifier : type_expression

return_statement 
	= RETURN expression 
	| RETURN


for_statement 
	= FOR identifier_list IN expression block 
	| FOR identifier_list  IN expression , newlines statement


repeatwhile_statement 
	= REPEAT block WHILE expression 
	| REPEAT statement WHILE expression

while_statement 
	= WHILE expression block 
	| WHILE expression , newlines statement



if_statement 
	= if_head_statement else_if_statement_list else_statement

if_head_statement 
	= IF expression block 
	| IF expression , newlines statement

else_statement 
	= newlines ELSE block 
	| newlines ELSE , newlines statement 
	| newlines ELSE newlines statement

else_if_statement_list 
	= newlines else_if_statement else_if_statement_list 
	| E

else_if_statement 
	= ELSE if_head_statement 
	| E


-------------------------------------------- expressions -------------------------------------


expression 
	= free_identifier_or_symbol_list


free_identifier_or_symbol_list 
	= free_identifier free_identifier_or_symbol_list 
	| symbol free_identifier_or_symbol_list 
	| E


symbol 
	= ( expression_list ) 
	| [ expression_list ] 
	| { expression_list } 
	| number 
	| string 
	| identifier



expression_list 
	= expression expression_list 
	| E




type_expression 
	= unimplemented







type_expression_list 
	= type_expression , type_expression_list 
	| free_identifier , type_expression_list 
	| type_expression type_expression_list 
	| free_identifier type_expression_list
